Fixed home page. Fix bg img overlapping scrollbar in firefox/edge.

--- a/frontend/src/app/layout/layout.component.scss
+++ b/frontend/src/app/layout/layout.component.scss
@@ -18,35 +18,9 @@
   pointer-events: none;
 }
 
-.viewport-wrapper {
-  position: relative;
-
-  .bg-image {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: url(/assets/images/wavy-bg.svg);
-    background-size: cover;
-    filter: brightness(20%);
-  }
-  
-  #router-outlet-wrapper {
-    width: 100%;
-    height: 100%;
-  }
-}
-
-#footer-wrapper {
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  right: 0;
-}
-
 mat-sidenav-container {
   overflow: visible;
+  background-color: transparent;
 }
 
 mat-sidenav {
@@ -55,4 +29,16 @@ mat-sidenav {
 
 mat-sidenav-content {
   overflow-x: hidden;
+}
+
+#router-outlet-wrapper {
+  width: 100%;
+  height: 100%;
+}
+
+#footer-wrapper {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
 }
